--- a/RetrowaveGames/RetrowaveGames.csproj
+++ b/RetrowaveGames/RetrowaveGames.csproj
@@ -72,6 +72,7 @@
     <Compile Include="TetrisForm.Designer.cs">
       <DependentUpon>TetrisForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TetrisGameLogics.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
